--- a/rag/templates/frontend/secrets.yaml
+++ b/rag/templates/frontend/secrets.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  {{- range $key, $value := .Values.global.secrets.vite_auth }}
+  {{- range $key, $value := .Values.frontend.secrets.viteAuth }}
   {{ $key }}: {{ $value | b64enc }}
   {{- end }}
 kind: Secret
